@startuml
skinparam linetype polyline
skinparam linetype ortho

skinparam nodesep 100
skinparam ranksep 100

skinparam titleBorderRoundCorner 15
skinparam titleBorderThickness 2
skinparam titleBorderColor red
skinparam titleBackgroundColor Aqua-CadetBlue
skinparam TitleFontSize 40

title Appendix M - ScoreboardScreen Class Composition Relations

class com.mygdx.game.game.screens.menu.ScoreboardScreen {
- CustomInputProcessor inputProcessor
- Button backButton
- SpriteBatch batch
- Texture texture
- Main game
- Table table
- ArrayList<PlayerScore> playerScores
+ CustomInputProcessor getInputProcessor()
+ void setInputProcessor(CustomInputProcessor)
+ void show()
+ void render(float)
+ void resize(int,int)
+ void pause()
+ void resume()
+ void hide()
+ void dispose()
}

class com.mygdx.game.engine.lifecycle.Main {
- {static} Main instance
- ScreenManager screenManager
- Preferences prefs
- SoundManager soundManager
+ EntityManager entityManager
- SpriteBatch batch
- BitmapFont font
+ int HEIGHT
+ int WIDTH
+ {static} Main getInstance()
+ ScreenManager getScreenManager()
+ void setScreenManager(ScreenManager)
+ SoundManager getSoundManager()
+ void setSoundManager(SoundManager)
+ SpriteBatch getBatch()
+ void setBatch(SpriteBatch)
+ BitmapFont getFont()
+ void setFont(BitmapFont)
+ Preferences getPrefs()
+ void setPrefs(Preferences)
+ void create()
+ void render()
+ void dispose()
}

class com.mygdx.game.game.components.ui.Button {
- Main game
- Rectangle rectangle
- float x
- float y
- float width
- float height
- String name
- String imgPath
- Texture texture
- SpriteBatch batch
- boolean visibility
- Sprite sprite
- boolean active
+ Texture getTexture()
+ void setTexture(Texture)
+ SpriteBatch getBatch()
+ void setBatch(SpriteBatch)
+ Sprite getSprite()
+ void setSprite(Sprite)
+ boolean getVisibility()
+ void setVisibility(boolean)
+ boolean isActive()
+ void setActive(boolean)
+ void setButtonColor(Color)
+ float getX()
+ void setX(float)
+ float getY()
+ void setY(float)
+ float getWidth()
+ void setWidth(float)
+ float getHeight()
+ void setHeight(float)
+ String getName()
+ void setName(String)
+ Rectangle getBound()
}

class com.mygdx.game.engine.input.CustomInputProcessor {
+ boolean mouseClicked(int)
+ boolean keyDown(int)
+ boolean keyUp(int)
+ boolean keyTyped(char)
+ boolean touchDown(int,int,int,int)
+ boolean touchUp(int,int,int,int)
+ boolean touchDragged(int,int,int)
+ boolean mouseMoved(int,int)
+ boolean scrolled(float,float)
+ boolean mouseHoverOver(T)
}

class com.mygdx.game.game.components.game.PlayerScore {
- String startTime
- int distanceTravelled
- int aliensKilled
+ String getStartTime()
+ void setStartTime(String)
+ int getDistanceTravelled()
+ void setDistanceTravelled(int)
+ int getAliensKilled()
+ void setAliensKilled(int)
+ String toString()
+ int compareTo(PlayerScore)
}

com.mygdx.game.game.screens.menu.ScoreboardScreen *------ com.mygdx.game.engine.input.CustomInputProcessor :has
com.mygdx.game.game.screens.menu.ScoreboardScreen *------ com.mygdx.game.engine.lifecycle.Main :has
com.mygdx.game.game.screens.menu.ScoreboardScreen *------ com.mygdx.game.game.components.ui.Button :has
com.mygdx.game.game.screens.menu.ScoreboardScreen *------ com.mygdx.game.game.components.game.PlayerScore :has many
@enduml